Update for gc and vm and db